Добавил кнопку перезагрузки решения и куки
